--- a/UIKitDemo-Swift/Base.lproj/Main.storyboard
+++ b/UIKitDemo-Swift/Base.lproj/Main.storyboard
@@ -3,10 +3,11 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
+        <!--菜单-->
         <scene sceneID="sqv-qo-USX">
             <objects>
                 <tableViewController id="N0k-kv-Wlm" customClass="MainController" customModule="UIKitDemo_Swift" customModuleProvider="target" sceneMemberID="viewController">
@@ -29,7 +30,7 @@
                             <outlet property="delegate" destination="N0k-kv-Wlm" id="xG0-rt-sC7"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="JmV-Tc-MaB"/>
+                    <navigationItem key="navigationItem" title="菜单" id="JmV-Tc-MaB"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lza-Z0-hI6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -50,6 +51,40 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7dP-Ps-MwN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2565" y="263"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="UnY-Tn-3mG">
+            <objects>
+                <viewController id="scd-f4-42Q" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="XTi-cs-3iq">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="s6m-ht-vaB">
+                                <rect key="frame" x="52" y="159" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b6q-SG-hmQ">
+                                        <rect key="frame" x="82" y="76" width="240" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1DM-Hy-TZg">
+                                <rect key="frame" x="109" y="443" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="zR0-2R-DIU"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VDH-5r-b2S" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2071" y="-411"/>
         </scene>
     </scenes>
 </document>
